AKS/ingress/ingress-aplicationGatewayAGIC/AAG-AKS/Deployments/root.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-root
spec:
  selector:
    matchLabels:
      app: service-root
  template:
    metadata:
      labels:
        app: service-root
    spec:
      containers:
      - name: service-root
        image: "higorluisbarbosa/site-treinamentos:v3"
        ports:
        - containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1
spec:
  selector:
    matchLabels:
      app: service1
  template:
    metadata:
      labels:
        app: service1
    spec:
      containers:
      - name: service1
        image: httpd:alpine
        ports:
        - containerPort: 80  # <- Alterado para a porta correta

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2
spec:
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
      - name: service2
        image: "nginx:latest"
        # env:
        #   - name: RESPONSE_MESSAGE
        #     value: "Service 2 esta no ar!"
        ports:
        - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-root
  labels:
    name: service-root
  annotations:
    #kubernetes.io/ingress.class: azure/application-gateway
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    #- host:  teste-cris.pgm-supp.org
     - http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: service-root
              port: 
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service1
  labels:
    name: service1
  annotations:
    #kubernetes.io/ingress.class: azure/application-gateway
    #appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/api/doc"
          backend:
            service:
              name: service1
              port: 
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service2
  labels:
    name: service2
  annotations:
    #kubernetes.io/ingress.class: azure/application-gateway
    #appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/service2"
          backend:
            service:
              name: service2
              port: 
                number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-root
spec:
  selector:
    app: service-root
  ports:
  - port: 80
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  selector:
    app: service1
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  selector:
    app: service2
  ports:
  - port: 80
    targetPort: 80
